--- a/index5.html
+++ b/index5.html
@@ -10,7 +10,7 @@ Groople tale
 <style>
  body
 {
-    background: #c7b39b url(Вступление/5.bmp);
+    background: #c7b39b url(5.bmp);
 	background-size: cover;
     color: #fff;
 	position: fixed; /* Абсолютное позиционирование */
