--- a/index6.html
+++ b/index6.html
@@ -10,7 +10,7 @@ Groople tale
 <style>
  body
 {
-    background: #c7b39b url(Вступление/6.bmp);
+    background: #c7b39b url(6.bmp);
 	background-size: cover;
     color: #fff;
 	position: fixed; /* Абсолютное позиционирование */
