--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,7 @@ Groople tale
 </style>
 <img src="nextarrow.png" width=40%	usemap="#Arrow">
 <map name="Arrow">
-<area shape=poly coords="1,11,30,22,80,21,84,0,98,17,128,31,155,40,96,99,89,68,4,97,10,85,12,54" href="main_page4.html" alt="Next">
+<area shape=poly coords="1,11,30,22,80,21,84,0,98,17,128,31,155,40,96,99,89,68,4,97,10,85,12,54" href="index4.html" alt="Next">
 </map>
 </p>
 </body>
